services/k8s/overlays/miniflux/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          ports:
            - containerPort: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.14
          command:
            - "/cloud_sql_proxy"
            - "-dir=/cloudsql"
            - "-instances=j15rpersonal:us-central1:j15r-db=tcp:5432"
            - "-credential_file=/secrets/cloudsql/credentials.json"
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
