services/k8s/overlays/miniflux/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: miniflux
